fixed card content align center and added read more button

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -176,6 +176,7 @@ header {
 	h2{
 		margin-top: 2em;
 	}
+	
 	&__box {
 		display: grid;
 		grid-template-columns: repeat(9, 1fr);
@@ -189,6 +190,8 @@ header {
 		position: relative;
 		display: grid;
 		justify-items: center;
+		align-items: center;
+		justify-content: center;
 		padding: 3em;
 		text-align: center;
 		border: 1px solid transparent;
@@ -250,6 +253,7 @@ header {
 		h3 {
 			margin-bottom: 0.6em;
 			text-transform: uppercase;
+		
 		}
 
 		&--one {
@@ -278,6 +282,52 @@ header {
 			grid-row: 6/7;
 			grid-column: 1/-1;
 		}
+	}
+}
+
+.aboutus-hero{
+	position: relative;
+	background-image: linear-gradient(to bottom, #330867 0%, #30cfd0 100%);
+	background-position: center;
+	background-size: cover;
+	color: #ddd;
+	z-index: 0;
+	.aboutus-shadow{
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		z-index: -5;
+	}
+	.aboutus-hero-item{
+		margin: 3em 0;
+		i{
+			font-size: 3rem;
+			margin: 0.5em 0;
+			text-shadow:(2px 2px 5px #000000);
+		}
+		.aboutus-hero-title{
+			
+			font-size: 2.5rem;
+		}
+	}
+	a{
+		text-decoration: none;
+		position: absolute;
+		bottom: 0;
+		text-transform: uppercase;
+		left: 50%;
+		transform: translateX(-50%);
+		color:$second-color;
+		transition: color .3s;
+		i{
+			font-size: 2rem;
+			padding: 0 0.3em;
+		}
+	}
+	a:hover{
+		color:$beige;
 	}
 }
 
@@ -386,5 +436,8 @@ header {
 			font-size: 2.5rem;
 			padding-top: 0.5em;
 		}
+	}
+	h2{
+		font-size: 3rem;
 	}
 }
